add novas funções

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <header>
     <h1>Bem-vindo ao Meu Site!</h1>
   </header>
-
-  <nav>
+<button id="backgroundButton" onclick="changeBackground()">Mudar Cor de Fundo</button>
+<div id="imagem">
+  <img src="./imagens/boo.png">
+</div>
+    <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="sobre.html">Sobre</a></li>
