--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
 </head>
 <body>
   <header>
-    <h1>Bem-vindo ao Meu Site!</h1>
+    <h1>☭ Bem-vindos ao Nosso site ☭ </h1>
   </header>
-<button id="backgroundButton" onclick="changeBackground()">Mudar Cor de Fundo</button>
-<div id="imagem">
-  <img src="./imagens/boo.png">
-</div>
     <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -24,8 +20,8 @@
   <section>
     <h2>Slideshow</h2>
     <div class="slideshow">
-      <img src="imagem1.jpg" alt="Imagem 1">
-      <img src="imagem2.jpg" alt="Imagem 2">
+      <img src="./imagens/fidelito.jpg" alt="Imagem 1">
+      <img src="/imagens/fredinho.jpg" alt="Imagem 2">
       <img src="imagem3.jpg" alt="Imagem 3">
     </div>
   </section>
@@ -35,7 +31,10 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a tortor at mauris feugiat tincidunt. Fusce mollis tincidunt enim ut sollicitudin. Vestibulum vitae arcu vitae metus bibendum suscipit. Donec tincidunt, nisl ac tincidunt venenatis, libero tortor tristique justo, ac viverra odio orci sed nunc. Phasellus ultricies risus mauris, id varius arcu tempus ut.</p>
     <!-- Continue com mais linhas de texto -->
   </section>
-
+  <button id="backgroundButton" onclick="changeBackground()">Mudar Cor de Fundo</button>
+  <div id="imagem">
+    <img src="./imagens/boo.png">
+  </div>    
   <script src="script.js"></script>
 </body>
 </html>
