--- a/contato.html
+++ b/contato.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <title>Meu Site</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
   <header>
-    <h1>Bem-vindo ao Meu Site!</h1>
+    <h1>Bem-vindo ao Nosso site</h1>
   </header>
 
   <nav>
@@ -19,20 +20,18 @@
   </nav>
 
   <section>
-    <h2>Slideshow</h2>
-    <div class="slideshow">
-      <img src="imagem1.jpg" alt="Imagem 1">
-      <img src="imagem2.jpg" alt="Imagem 2">
-      <img src="imagem3.jpg" alt="Imagem 3">
+    <div id="formulario" >
+      <h1>Insira seus dados para contato</h1>
+      <p>Nome: <input type="text"></p>
+      <p>Telefone: <input type="tel""></p>
+      <p>Email: <input type="email"></p>
+      <button type="submit" id="enviar" >Enviar</button>
     </div>
   </section>
 
-  <section>
-    <h2>Texto de 10 linhas</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a tortor at mauris feugiat tincidunt. Fusce mollis tincidunt enim ut sollicitudin. Vestibulum vitae arcu vitae metus bibendum suscipit. Donec tincidunt, nisl ac tincidunt venenatis, libero tortor tristique justo, ac viverra odio orci sed nunc. Phasellus ultricies risus mauris, id varius arcu tempus ut.</p>
-    <!-- Continue com mais linhas de texto -->
-  </section>
-
+  <button id="backgroundButton" onclick="changeBackground()">Mudar Cor de Fundo</button>
+  
+ 
   <script src="script.js"></script>
 </body>
 </html>
