--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2>Slideshow</h2>
     <div class="slideshow">
       <img src="./imagens/fidelito.jpg" alt="Imagem 1">
-      <img src="./imagens/manifesto-comunista.png" alt="Imagem 2">
+      <img src="./imagens/omanifesto.jpg" alt="Imagem 2">
       <img src="./imagens/marxismo.jpg" alt="Imagem 3">
     </div>
   </section>
@@ -31,15 +31,14 @@
   <button id="backgroundButton" onclick="changeBackground()">Mudar Cor de Fundo</button>
 
   <section id="texto">
-    <h2>Texto de 10 linhas</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a tortor at mauris feugiat tincidunt. Fusce mollis tincidunt enim ut sollicitudin. Vestibulum vitae arcu vitae metus bibendum suscipit. Donec tincidunt, nisl ac tincidunt venenatis, libero tortor tristique justo, ac viverra odio orci sed nunc. Phasellus ultricies risus mauris, id varius arcu tempus ut.</p>
-    <p>O Manifesto comunista (Das Kommunistische Manifest), originalmente denominado Manifesto do Partido comunista (em alemão: Manifest der Kommunistischen Partei), publicado pela primeira vez em 21 de fevereiro de 1848, é historicamente um dos tratados políticos de maior influência mundial. Comissionado pela Liga dos Comunistas e escrito pelos teóricos fundadores do socialismo científico Karl Marx e Friedrich Engels, expressa o programa e propósitos da Liga.[1]
+    <h2>O Manifesto comunista: </h2>
+    
+    <p>O Manifesto Comunista foi escrito durante as Revoluções de 1848, um período de lutas sociais na Europa. Ele analisa a Revolução Industrial e defende duas principais reivindicações: a redução da jornada de trabalho para dez horas e o sufrágio universal. Essas demandas refletiam as preocupações dos trabalhadores da época. O manifesto ajudou a conscientizar sobre as desigualdades sociais e inspirou movimentos operários e revolucionários ao redor do mundo. Embora essas demandas não tenham sido completamente atendidas naquela época, o manifesto teve um impacto significativo ao influenciar o pensamento político e social.</p>
 
-      O Manifesto comunista foi escrito no meio do grande processo de lutas urbanas das Revoluções de 1848, chamadas também de Primavera dos Povos, um processo revolucionário de quase um ano que atingiu os principais países Europeus e é uma análise da Revolução Industrial contemporânea a ela.[2] Duas de suas maiores reivindicações foram reformas sociais: a conquista da diminuição da jornada diária de trabalho de doze para dez horas e o voto universal, embora apenas para os homens.</p>
-    <p>No prefácio de 1888, assinado por Marx e Engels, este descreve que o Manifesto foi a plataforma da Liga dos Comunistas, uma associação dos trabalhadores, primeiramente apenas alemães, depois internacional, "uma sociedade secreta". O congresso da Liga aconteceu em Londres, em 1847. Esboçado em alemão, em 1848, o manuscrito foi enviado à gráfica em janeiro de 1848, poucas semanas antes da revolução francesa de 24 de fevereiro. A primeira tradução inglesa foi realizada por Miss Helen Macfarlane e foi publicada no "Red Republican" em 1850.[3]
+      <h2>O impacto no mundo: </h2>
 
-      Engels também descreve que a insurreição em Paris foi derrotada em junho de 1848. Segundo ele a "primeira grande batalha entre o proletariado e a burguesia", a partir dessa época a luta dos trabalhadores é reduzida e, embora movimentos independentes continuassem a mostrar sinais de vida, eles eram sistematicamente derrotados. A polícia prussiana perseguiu o comitê central da Liga Comunista, localizada em Colônia. Os seus membros foram presos, e depois de dezoito meses, foram julgados, em 1852, sete a penas de prisão entre três a seis anos, em uma fortaleza. A Liga foi dissolvida pelos seus membros, a partir do que o manifesto é condenado a um longo esquecimento,[3] hoje sendo um dos livros mais lidos em todo o mundo, com traduções em todos os idiomas.</p>
-      <!-- Continue com mais linhas de texto -->
+    <p>O Manifesto Comunista é um documento escrito por duas pessoas chamadas Karl Marx e Friedrich Engels. Ele foi escrito em 1848 e falava sobre como as coisas são diferentes para as pessoas no mundo. O manifesto mostrou que algumas pessoas têm muito dinheiro e poder, enquanto outras têm muito pouco. Isso não é justo, certo? O manifesto defendia os direitos dos trabalhadores, que muitas vezes são explorados e não têm boas condições de vida. Eles queriam que os trabalhadores tivessem menos horas de trabalho e melhores condições. O manifesto também nos fez pensar sobre as coisas que estão erradas na sociedade e como podemos mudar isso. Ele nos incentivou a questionar e a buscar maneiras de tornar o mundo mais justo para todos. Ao longo da história, as ideias do manifesto inspiraram muitas pessoas a lutar por uma sociedade melhor. Eles queriam que todos tivessem os mesmos direitos e oportunidades. Algumas vezes, essas ideias levaram a mudanças importantes na forma como as pessoas são tratadas e nos ajudaram a entender melhor as desigualdades. No entanto, nem sempre foi fácil colocar essas ideias em prática. Algumas pessoas têm opiniões diferentes sobre o manifesto e nem todas concordam com ele. Mas o importante é que ele nos fez pensar sobre como podemos fazer do mundo um lugar melhor para todos. </p>
+   
   </section>
   
  
