add form e imagens

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <img src="./imagens/fidelito.jpg" alt="Imagem 1">
       <img src="./imagens/omanifesto.jpg" alt="Imagem 2">
       <img src="./imagens/marxismo.jpg" alt="Imagem 3">
+      <img src="./imagens/obra1.jpg" alt="Imagem 4">
+      <img src="./imagens/votos.jpg" alt="Imagem 5">
+      <img src="./imagens/arte2.jpg" alt="Imagem 6">
     </div>
   </section>
 
