--- a/produtos.html
+++ b/produtos.html
@@ -5,11 +5,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
   <header>
     <h1>Bem-vindo ao Nosso site</h1>
   </header>
-
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -18,9 +16,51 @@
       <li><a href="produtos.html">Produtos</a></li>
     </ul>
   </nav>
-
-  <button id="backgroundButton" onclick="changeBackground()">Mudar Cor de Fundo</button>
-  
-  <script src="script.js"></script>
-</body>
+  <div class="product-container">
+    <div class="product-card">
+      <img src="imagens/origem.png" alt="Produto 1">
+      <h3>A origem da família, da propriedade privada e do Estado</h3>
+      <p>Preço: R$42,10</p>
+      <a href="https://www.mercadolivre.com.br/a-origem-da-familia-da-propriedade-privada-e-do-estado-de-engels-friedrich-serie-marx-engels-editora-jinkings-editores-associados-ltda-epp-capa-mole-em-portugus-2019/p/MLB19289124?pdp_filters=item_id:MLB2749316601#is_advertising=true&searchVariation=MLB19289124&position=1&search_layout=stack&type=pad&tracking_id=9c8acb72-6d7b-4335-a356-4067cc43bdd3&is_advertising=true&ad_domain=VQCATCORE_LST&ad_position=1&ad_click_id=ZWM0MzA2NzMtOWM4ZS00YjRhLWI5YzEtYTQ4YjU1MWM1NmJi">Ver detalhes</a>
+    </div>
+    <div class="product-card">
+      <img src="imagens/omanifesto.jpg" alt="Produto 2">
+      <h3>O manifesto comunista</h3>
+      <p>Preço: R$ 79,99</p>
+      <a href="https://www.mercadolivre.com.br/o-manifesto-comunista-de-marx-karl-editora-paz-e-terra-ltda-capa-mole-em-portugus-2021/p/MLB19288852?pdp_filters=category:MLB437616#searchVariation=MLB19288852&position=5&search_layout=grid&type=product&tracking_id=35e83331-f59b-4537-9de7-e8d0fcb27dff.html">Ver detalhes</a>
+    </div>
+    <div class="product-card">
+      <img src="imagens/oque.jpg" alt="Produto 3">
+      <h3>Nome do Produto 3</h3>
+      <p>Descrição do Produto 3</p>
+      <p>Preço: R$ 149,99</p>
+      <a href="produto3.html">Ver detalhes</a>
+    </div>
+    <div class="product-card">
+      <img src="produto4.jpg" alt="Produto 4">
+      <h3>Nome do Produto 4</h3>
+      <p>Descrição do Produto 4</p>
+      <p>Preço: R$ 119,99</p>
+      <a href="produto4.html">Ver detalhes</a>
+    </div>
+    <div class="product-card">
+      <img src="produto5.jpg" alt="Produto 5">
+      <h3>Nome do Produto 5</h3>
+      <p>Descrição do Produto 5</p>
+      <p>Preço: R$ 89,99</p>
+      <a href="produto5.html">Ver detalhes</a>
+    </div>
+    <div class="product-card">
+      <img src="produto6.jpg" alt="Produto 6">
+      <h3>Nome do Produto 6</h3>
+      <p>Descrição do Produto 6</p>
+      <p>Preço: R$ 129,99</p>
+      <a href="produto6.html">Ver detalhes</a>
+    </div>
+    <div class="product-card">
+      <img src="produto7.jpg" alt="Produto 7">
+      <h3>Nome do Produto 7</h3>
+      <p>Descrição do Produto 7</p>
+      <p>Preço: R$ 109,99</p>
+ </body>
 </html>
