--- a/sobre.html
+++ b/sobre.html
@@ -5,11 +5,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
   <header>
     <h1>Bem-vindo ao Nosso site</h1>
   </header>
-
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -18,9 +16,38 @@
       <li><a href="produtos.html">Produtos</a></li>
     </ul>
   </nav>
-
-  <button id="backgroundButton" onclick="changeBackground()">Mudar Cor de Fundo</button>
-  
-  <script src="script.js"></script>
-</body>
-</html>
+  <div class="quiz">
+    <br>
+    <h1>Marque as alternativas certas:</h1><br>
+    <ul>
+      <h2>Quem foi o grande nome na história do comunismo?</h2>
+      <input type="radio" id="q1a" name="q1" value="a">
+      <label for="q1a">Joe Biden</label><br>
+      <input type="radio" id="q1b" name="q1" value="b">
+      <label for="q1b">Rainha Elizabeth Segunda</label><br>
+      <input type="radio" id="q1c" name="q1" value="c">
+      <label for="q1c">Vladimir Putin</label><br>
+      <input type="radio" id="q1d" name="q1" value="d">
+      <label for="q1d">Karl Marx</label><br><br> <!--Certa-->
+      <h2>Em qual país surgiu o comunismo?</h2>
+      <input type="radio" id="q2a" name="q2" value="a">
+      <label for="q2a">França</label><br>
+      <input type="radio" id="q2b" name="q2" value="b">
+      <label for="q2b">China</label><br>
+      <input type="radio" id="q2c" name="q2" value="c">
+      <label for="q2c">União Soviética</label><br> <!--Certa-->
+      <input type="radio" id="q2d" name="q2" value="d">
+      <label for="q2d">Itália</label><br><br>
+      <h2>Qual destes países é comunista atualmente?</h2>
+      <input type="radio" id="q3a" name="q3" value="a">
+      <label for="q3a">Japão</label><br>
+      <input type="radio" id="q3b" name="q3" value="b">
+      <label for="q3b">Rússia</label><br>
+      <input type="radio" id="q3c" name="q3" value="c">
+      <label for="q3c">Coreia do Norte</label><br> <!--Certa-->
+      <input type="radio" id="q3d" name="q3" value="d">
+      <label for="q3d">Inglaterra</label><br><br><br>
+      <input id="enviarQuiz" type="submit" class="enviar" onclick="validar()">
+    </ul>
+  </div>
+  <button id="background
