ultimas mudanças do lulu

--- a/produtos.html
+++ b/produtos.html
@@ -26,15 +26,14 @@
     <div class="product-card">
       <img src="imagens/omanifesto.jpg" alt="Produto 2">
       <h3>O manifesto comunista</h3>
-      <p>Preço: R$ 79,99</p>
+      <p>Preço: R$ 24,92</p>
       <a href="https://www.mercadolivre.com.br/o-manifesto-comunista-de-marx-karl-editora-paz-e-terra-ltda-capa-mole-em-portugus-2021/p/MLB19288852?pdp_filters=category:MLB437616#searchVariation=MLB19288852&position=5&search_layout=grid&type=product&tracking_id=35e83331-f59b-4537-9de7-e8d0fcb27dff.html">Ver detalhes</a>
     </div>
     <div class="product-card">
       <img src="imagens/oque.jpg" alt="Produto 3">
-      <h3>Nome do Produto 3</h3>
-      <p>Descrição do Produto 3</p>
-      <p>Preço: R$ 149,99</p>
-      <a href="produto3.html">Ver detalhes</a>
+      <h3>O que Fazer ?</h3>
+      <p>Preço: R$ 48,40</p>
+      <a href="https://www.mercadolivre.com.br/o-que-fazer-questoes-candentes-de-nosso-movimento-de-lnin-vladimir-ilitch-serie-arsenal-lnin-4-vol-4-editora-jinkings-editores-associados-ltda-epp-capa-mole-em-portugus-2020/p/MLB19289138?pdp_filters=category:MLB437616#searchVariation=MLB19289138&position=1&search_layout=grid&type=product&tracking_id=c2de5dbf-dd23-439a-b468-386615b5fd6e">Ver detalhes</a>
     </div>
     <div class="product-card">
       <img src="produto4.jpg" alt="Produto 4">
