--- a/contato.html
+++ b/contato.html
@@ -22,10 +22,10 @@
   <section>
     <div id="formulario" >
       <h1>Insira seus dados para contato</h1>
-      <p>Nome: <input type="text"></p>
-      <p>Telefone: <input type="tel""></p>
-      <p>Email: <input type="email"></p>
-      <button type="submit" id="enviar" >Enviar</button>
+      <p>Nome: <input type="text" required></p>
+      <p>Telefone: <input type="tel"" required></p>
+      <p>Email: <input type="email" required></p>
+      <button type="submit" id="enviar" onclick="enviarFormulario()" >Enviar</button>
     </div>
   </section>
 
