--- a/index.html
+++ b/index.html
@@ -21,13 +21,8 @@
 
   <section>
     <h2>Slideshow</h2>
-    <div class="slideshow">
-      <img src="./imagens/fidelito.jpg" alt="Imagem 1">
-      <img src="./imagens/omanifesto.jpg" alt="Imagem 2">
-      <img src="./imagens/marxismo.jpg" alt="Imagem 3">
-      <img src="./imagens/obra1.jpg" alt="Imagem 4">
-      <img src="./imagens/votos.jpg" alt="Imagem 5">
-      <img src="./imagens/arte2.jpg" alt="Imagem 6">
+    <div id="slideshow" >
+      <center><img id="slide" ></center>
     </div>
   </section>
 
@@ -40,8 +35,9 @@
 
       <h2>O impacto no mundo: </h2>
 
-    <p>O Manifesto Comunista é um documento escrito por duas pessoas chamadas Karl Marx e Friedrich Engels. Ele foi escrito em 1848 e falava sobre como as coisas são diferentes para as pessoas no mundo. O manifesto mostrou que algumas pessoas têm muito dinheiro e poder, enquanto outras têm muito pouco. Isso não é justo, certo? O manifesto defendia os direitos dos trabalhadores, que muitas vezes são explorados e não têm boas condições de vida. Eles queriam que os trabalhadores tivessem menos horas de trabalho e melhores condições. O manifesto também nos fez pensar sobre as coisas que estão erradas na sociedade e como podemos mudar isso. Ele nos incentivou a questionar e a buscar maneiras de tornar o mundo mais justo para todos. Ao longo da história, as ideias do manifesto inspiraram muitas pessoas a lutar por uma sociedade melhor. Eles queriam que todos tivessem os mesmos direitos e oportunidades. Algumas vezes, essas ideias levaram a mudanças importantes na forma como as pessoas são tratadas e nos ajudaram a entender melhor as desigualdades. No entanto, nem sempre foi fácil colocar essas ideias em prática. Algumas pessoas têm opiniões diferentes sobre o manifesto e nem todas concordam com ele. Mas o importante é que ele nos fez pensar sobre como podemos fazer do mundo um lugar melhor para todos. </p>
-   
+    <p>O Manifesto Comunista é um documento escrito por duas pessoas chamadas Karl Marx e Friedrich Engels. Ele foi escrito em 1848 e falava sobre como as coisas são diferentes para as pessoas no mundo. O manifesto mostrou que algumas pessoas têm muito dinheiro e poder, enquanto outras têm muito pouco. Isso não é justo, certo? O manifesto defendia os direitos dos trabalhadores, que muitas vezes são explorados e não têm boas condições de vida. Eles queriam que os trabalhadores tivessem menos horas de trabalho e melhores condições. </p>
+    <p> O manifesto também nos fez pensar sobre as coisas que estão erradas na sociedade e como podemos mudar isso. Ele nos incentivou a questionar e a buscar maneiras de tornar o mundo mais justo para todos. Ao longo da história, as ideias do manifesto inspiraram muitas pessoas a lutar por uma sociedade melhor. Eles queriam que todos tivessem os mesmos direitos e oportunidades. Algumas vezes, essas ideias levaram a mudanças importantes na forma como as pessoas são tratadas e nos ajudaram a entender melhor as desigualdades. No entanto, nem sempre foi fácil colocar essas ideias em prática. Algumas pessoas têm opiniões diferentes sobre o manifesto e nem todas concordam com ele. Mas o importante é que ele nos fez pensar sobre como podemos fazer do mundo um lugar melhor para todos.</p>
+
   </section>
   
  
