--- a/produtos.html
+++ b/produtos.html
@@ -61,5 +61,7 @@
       <h3>Nome do Produto 7</h3>
       <p>Descrição do Produto 7</p>
       <p>Preço: R$ 109,99</p>
+    </div>
+  </div>
  </body>
 </html>
