--- a/sobre.html
+++ b/sobre.html
@@ -16,6 +16,7 @@
       <li><a href="produtos.html">Produtos</a></li>
     </ul>
   </nav>
+  <br>
   <div class="quiz">
     <br>
     <h1>Marque as alternativas certas:</h1><br>
@@ -47,7 +48,8 @@
       <label for="q3c">Coreia do Norte</label><br> <!--Certa-->
       <input type="radio" id="q3d" name="q3" value="d">
       <label for="q3d">Inglaterra</label><br><br><br>
-      <input id="enviarQuiz" type="submit" class="enviar" onclick="validar()">
+      <input id="enviar" type="submit" class="enviar" onclick="validar()">
     </ul>
   </div>
-  <button id="background
+</body>
+</html>
